# spotify-cli

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/spotify_cli/: app.py  auth.py  cli.py  config.py  entry_points.py  playback.py  spotify_service.py
src/spotify_cli/app/: app.py  app.tcss  messages.py
src/spotify_cli/app/components/: choose_device.py  library.py  main.py  search.py  track_details.py
src/spotify_cli/app/screens/: choose_device.py  main.py  search.py  setup_env.py
src/spotify_cli/app/widgets/: active_device.py  library.py  track_details.py  track_progress_bar.py
src/spotify_cli/core/: auth.py  caching.py  config.py  spotify.py  spotify_service.py
src/spotify_cli/schemas/: device.py  images.py  playback.py  search.py  track.py
src/spotify_cli/tests/: utils.py
src/spotify_cli/tests/app/screens/: test_choose_device.py  test_search.py
src/spotify_cli/tests/app/widgets/: test_active_device.py  test_library.py  test_track_details.py
src/spotify_cli/tests/core/: test_config.py  test_spotify.py
src/spotify_cli/utils/: ascii_image_converter.py  caching.py  date_time_helpers.py  pixelate_images.py
