[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-cli"
version = "0.1.0"
description = "Terminal Spotify control (search + play)"
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "spotipy>=2.24",
  "click>=8.1",
  "textual==6.1.0",
  "textual-dev==1.7.0",
  "python-dotenv>=1.0",
  "pydantic==2.11.9",
  "ascii-magic==2.3.0",
]

[project.scripts]
spotify = "spotify_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["spotify_cli"]
