[project]
name = "spotify-cli"
version = "0.1.0"
description = "A simple tui client for spotify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "spotipy>=2.24",
  "textual==6.4.0",
  "python-dotenv>=1.0",
  "pydantic==2.12.3",
  "rich-pixels==3.0.1"
]

[project.scripts]
spotify = "spotify_cli.entry_points:spotify_tui"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spotify_cli*"]
